kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-frontend
  labels:
    app: cicd-frontend
spec:
  selector:
    app: cicd-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
